Source/WebCore/bindings/v8/custom/V8MessageEventCustom.cpp
@@ -48,8 +48,8 @@ v8::Handle<v8::Value> V8MessageEvent::portsAccessorGetter(v8::Local<v8::String> 
     MessageEvent* event = V8MessageEvent::toNative(info.Holder());
 
     MessagePortArray* ports = event->ports();
-    if (!ports || ports->isEmpty())
-        return v8::Null();
+    if (!ports)
+        return v8::Array::New(0);
 
     v8::Local<v8::Array> portArray = v8::Array::New(ports->size());
     for (size_t i = 0; i < ports->size(); ++i)
